--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <h2 class="sidebar__title">CONTACTS</h2>
         <ul>
           <li>
-            <a class="sidebar__link" href="tel:+380672206192">
+            <a class="sidebar__link" target="_blank" href="tel:+380672206192">
               +380672206192
             </a>
           </li>
           <li>
-            <a class="sidebar__link" href="mailto:anton.kulik.dev@gmail.com">
+            <a class="sidebar__link" target="_blank" href="mailto:anton.kulik.dev@gmail.com">
               anton.kulik.dev@gmail.com
             </a>
           </li>
           <li>
-            <a class="sidebar__link" href="https://t.me/c_1_m_8"> telegram </a>
+            <a class="sidebar__link" target="_blank" href="https://t.me/c_1_m_8"> telegram </a>
           </li>
           <li>
             <a
@@ -64,7 +64,7 @@
         <ul class="sidebar__list">
           <li>
             <b>Languages:</b>
-            PHP 5.4 => 8.1, Javascript, HTML, CSS.
+            PHP 5.4 => 8.2, Javascript, HTML, CSS.
           </li>
           <li><b>Databases: </b> MySQL, Advantage DB (ADS).</li>
           <li>
@@ -122,13 +122,13 @@
     </aside>
     <!----------------------------------- summary section --------------------------------------->
 
-    <div class="summary-containet">
+    <div class="summary-container">
       <section class="summary__title-container">
         <h1 class="summary__title-name">Anton Kulyk</h1>
         <h2 class="summary__title-position">Full Stack Developer</h2>
         <h2 class="summary__title">SUMMARY</h2>
         <span>
-          PHP developer with 6 years of experience. I make it my goal to create
+          PHP developer with 7 years of experience. I make it my goal to create
           software with the user in mind, creating applications with a usable
           and intuitive user interface experience. I also understand the
           importance of creating highly readable and easily maintainable source
@@ -141,17 +141,26 @@
         <h1 class="summary__title">WORK EXPERIENCE</h1>
 
         <p class="summary__title-company">
-          Datgate LLC (automotive sphere in USA)
+          &#11088; Aimprosoft (Ukraine)
+        </p>
+        <b class="summary__title-position">Software Engineer</b>
+        <p class="summary__date">1.2022 - present (1 year). | Remote</p>
+        <p class="summary__list">
+          Code review, create new and extend exists functionality, writing test (PHPUnit, cypress)
+        </p>
+
+        <p class="summary__title-company">
+          ► Datgate LLC (USA)
         </p>
         <b class="summary__title-position">Team Lead</b>
-        <p class="summary__date">05.2019 - present (3 years). | Remote</p>
+        <p class="summary__date">5.2019 - 1.2022 (~3 years). | Remote</p>
         <p class="summary__list">
           The similar to previously plus code reviews, interviews, checks
-          candidates, organize team work and controling entire architecture and
+          candidates, organize team work and controlling entire architecture and
           business logic.
         </p>
 
-        <p class="summary__title-company">Dealertower LLC</p>
+        <p class="summary__title-company">► Dealertower LLC (USA)</p>
         <b class="summary__title-position">Strong Middle PHP Developer</b>
         <p class="summary__date">3.2018 - 5.2019 (1 year)</p>
         <p class="summary__list">
@@ -164,7 +173,7 @@
           https://nissanofportland.com/
         </p>
 
-        <p class="summary__title-company">IDweb LLC</p>
+        <p class="summary__title-company">► IDweb LLC (USA)</p>
         <b class="summary__title-position">Fullstack PHP Developer</b>
         <p class="summary__date">2.2017 - 3.2018 (1 year).</p>
         <p class="summary__list">
@@ -175,7 +184,7 @@
           automotive sphere.
         </p>
 
-        <p class="summary__title-company">TAS Group LLC</p>
+        <p class="summary__title-company">► TAS Group LLC (Ukraine)</p>
         <b class="summary__title-position">Automated Test engineer </b>
         <p class="summary__date">5.2015 - 10.2016 (1 year).</p>
         <p class="summary__list">
@@ -183,7 +192,7 @@
           for `prozorro` platform Python, Robot Framework
         </p>
 
-        <p class="summary__title-company">PJSC Insurance Company "Kraina"</p>
+        <p class="summary__title-company">► PJSC Insurance Company "Kraina" (Ukraine)</p>
         <b class="summary__title-position">PHP Developer </b>
         <p class="summary__date">3.2014 - 4.2015 (1 year).</p>
         <p class="summary__list">
@@ -202,7 +211,7 @@
               class="summary__title-company"
               href="https://php-academy.kiev.ua/"
               target="_blank"
-              >PHP Academy</a
+              >&#x2705; PHP Academy</a
             >
           </li>
           <li class="summary__title-position">PHP Developer | 2016</li>
@@ -213,7 +222,8 @@
             <a
               class="summary__title-company"
               href="https://webformyself.com/laravel/"
-              >Webformyself</a
+              target="_blank"
+              >&#x2705; Webformyself</a
             >
           </li>
           <li class="summary__title-position">PHP, Laravel | 2016</li>
@@ -225,7 +235,7 @@
               class="summary__title-company"
               href="https://javarush.com/"
               target="_blank"
-              >Javarush</a
+              >&#x2705; Javarush</a
             >
           </li>
           <li class="summary__title-position">JAVA Developer | 2015</li>
@@ -235,13 +245,27 @@
           <li>
             <a
               class="summary__title-company"
-              href="devionity.com"
+              href="https://devionity.com"
               target="_blank"
-              >Devionity</a
+              >&#x2705; Devionity</a
             >
           </li>
           <li class="summary__title-position">
             HTML5, CSS3, Javascript | 2015
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a
+              class="summary__title-company"
+              href="https://www.sololearn.com/profile/2188052"
+              target="_blank"
+              >&#x2705; Sololearn</a
+            >
+          </li>
+          <li class="summary__title-position">
+            HTML5, CSS3, Javascript, PHP, MySQL | 2015
           </li>
         </ul>
 
