--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li><b>Frameworks: </b>Laravel, Robot Framework (auto testing).</li>
           <li><b>CMS: </b>WordPress, Joomla, Drupal.</li>
           <li>
-            <b>Platforms: </b> Linux (Redhat/Debian), Windows (98, 2000, XP, 7,
+            <b>Platforms: </b> macOS, Linux (Redhat/Debian), Windows (98, 2000, XP, 7,
             8, 10).
           </li>
         </ul>
