--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2 class="summary__title-position">Full Stack Developer</h2>
         <h2 class="summary__title">SUMMARY</h2>
         <span>
-          PHP developer with 7 years of experience. I make it my goal to create
+          PHP developer with 8 years of experience. I make it my goal to create
           software with the user in mind, creating applications with a usable
           and intuitive user interface experience. I also understand the
           importance of creating highly readable and easily maintainable source
@@ -144,7 +144,7 @@
           &#11088; Aimprosoft (Ukraine)
         </p>
         <b class="summary__title-position">Software Engineer</b>
-        <p class="summary__date">1.2022 - present (1 year). | Remote</p>
+        <p class="summary__date">1.2022 - present (2 years). | Remote</p>
         <p class="summary__list">
           Code review, create new and extend exists functionality, writing test (PHPUnit, cypress)
         </p>
