--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
           <li>Redis</li>
           <li>Nginx</li>
           <li>Apache</li>
+          <li>SQL Injections</li>
+          <li>LFI/RFI</li>
+          <li>OWASP Top 10</li>
+          <li>CTF</li>
+          <li>Solidity</li>
+          <li>MQL4</li>
         </ul>
       </section>
       <section>
@@ -128,7 +134,7 @@
         <h2 class="summary__title-position">Full Stack Developer</h2>
         <h2 class="summary__title">SUMMARY</h2>
         <span>
-          PHP developer with 7 years of experience. I make it my goal to create
+          PHP developer with 8 years of experience. I make it my goal to create
           software with the user in mind, creating applications with a usable
           and intuitive user interface experience. I also understand the
           importance of creating highly readable and easily maintainable source
@@ -141,10 +147,10 @@
         <h1 class="summary__title">WORK EXPERIENCE</h1>
 
         <p class="summary__title-company">
-          &#11088; Aimprosoft (Ukraine)
+          &#11088; [NDA] (Ukraine)
         </p>
         <b class="summary__title-position">Software Engineer</b>
-        <p class="summary__date">1.2022 - present (1 year). | Remote</p>
+        <p class="summary__date">1.2022 - present (>1 year). | Remote</p>
         <p class="summary__list">
           Code review, create new and extend exists functionality, writing test (PHPUnit, cypress)
         </p>
@@ -205,6 +211,39 @@
       </section>
       <section class="summary-container">
         <h2 class="summary__title">EDUCATION</h2>
+        <ul>
+          <li>
+            <a
+              class="summary__title-company"
+              href="https://ctf.hacker101.com/ctf"
+              target="_blank"
+              >&#x2705; HackerOne</a
+            >
+          </li>
+          <li class="summary__title-position">Member | 2022 - present</li>
+        </ul>
+        <ul>
+          <li>
+            <a
+              class="summary__title-company"
+              href="https://academy.hackthebox.com/"
+              target="_blank"
+              >&#x2705; HackTheBox</a
+            >
+          </li>
+          <li class="summary__title-position">Student | 2023 - present</li>
+        </ul>
+        <ul>
+          <li>
+            <a
+              class="summary__title-company"
+              href="https://tryhackme.com/profile"
+              target="_blank"
+              >&#x2705; TryHackMe</a
+            >
+          </li>
+          <li class="summary__title-position">Student | 2022 - present</li>
+        </ul>
         <ul>
           <li>
             <a
