--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <!------------------------------ sidebar section (CONTACTS) -------------------------------->
 
     <aside class="sidebar">
-      <div class="img-container"></div>
       <section>
         <h2 class="sidebar__title">CONTACTS</h2>
         <ul>
           <li>
             <a class="sidebar__link" target="_blank" href="tel:+380672206192">
-              +380672206192
+              +1 (656) 200-1542
             </a>
           </li>
           <li>
@@ -134,7 +133,7 @@
         <h2 class="summary__title-position">Full Stack Developer</h2>
         <h2 class="summary__title">SUMMARY</h2>
         <span>
-          PHP developer with 8 years of experience. I make it my goal to create
+          PHP developer with 10 years of experience. I make it my goal to create
           software with the user in mind, creating applications with a usable
           and intuitive user interface experience. I also understand the
           importance of creating highly readable and easily maintainable source
@@ -147,10 +146,10 @@
         <h1 class="summary__title">WORK EXPERIENCE</h1>
 
         <p class="summary__title-company">
-          &#11088; [NDA] (Ukraine)
+          &#11088; [NDA] (USA)
         </p>
         <b class="summary__title-position">Software Engineer</b>
-        <p class="summary__date">1.2022 - present (>1 year). | Remote</p>
+        <p class="summary__date">1.2022 - present (>2 years). | Remote</p>
         <p class="summary__list">
           Code review, create new and extend exists functionality, writing test (PHPUnit, cypress)
         </p>
