github login update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li>
             <a
               class="sidebar__link"
-              href="https://github.com/c1m8"
+              href="https://github.com/anton-kulyk"
               target="_blank"
             >
               github
